logs/loss_ablation_fsdp/lsai-449186.out
START TIME: Mon May 19 13:32:16 CEST 2025
slurmstepd: error: couldn't chdir to `/workspace': No such file or directory: going to /tmp instead
slurmstepd: error: couldn't chdir to `/workspace': No such file or directory: going to /tmp instead
slurmstepd: error: couldn't chdir to `/workspace': No such file or directory: going to /tmp instead
slurmstepd: error: couldn't chdir to `/workspace': No such file or directory: going to /tmp instead
slurmstepd: error: couldn't chdir to `/workspace': No such file or directory: going to /tmp instead
  File "/iopsstor/scratch/cscs/baraq/lai-proj/train_fsdp.py", line 1
  File "/iopsstor/scratch/cscs/baraq/lai-proj/train_fsdp.py", line 1
  File "/iopsstor/scratch/cscs/baraq/lai-proj/train_fsdp.py", line 1
            python<br>import torch.distributed.launcher.api as _api<br>_orig = _api.launch_agent<br>def _safe(*a, **kw):<br> r = _orig(*a, **kw); return r or type("R", (), {"is_failed":lambda *_:False})()<br>_api.launch_agent = _safe<br>
python<br>import torch.distributed.launcher.api as _api<br>_orig = _api.launch_agent<br>def _safe(*a, **kw):<br> r = _orig(*a, **kw); return r or type("R", (), {"is_failed":lambda *_:False})()<br>_api.launch_agent = _safe<br>
python<br>import torch.distributed.launcher.api as _api<br>_orig = _api.launch_agent<br>def _safe(*a, **kw):<br> r = _orig(*a, **kw); return r or type("R", (), {"is_failed":lambda *_:False})()<br>_api.launch_agent = _safe<br>
                                         ^ ^^^  File "/iopsstor/scratch/cscs/baraq/lai-proj/train_fsdp.py", line 1
^^    ^^^^^^^python<br>import torch.distributed.launcher.api as _api<br>_orig = _api.launch_agent<br>def _safe(*a, **kw):<br> r = _orig(*a, **kw); return r or type("R", (), {"is_failed":lambda *_:False})()<br>_api.launch_agent = _safe<br>

^^^    
^SyntaxError^:  SyntaxErrorinvalid syntax
 : 
invalid syntaxSyntaxError
 :  invalid syntax 
     ^^^^^^
SyntaxError: invalid syntax
E0519 13:32:29.392000 221052 torch/distributed/elastic/multiprocessing/api.py:869] failed (exitcode: 1) local_rank: 0 (pid: 221640) of binary: /usr/bin/python3
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/usr/local/lib/python3.12/dist-packages/torch/distributed/run.py", line 922, in <module>
    main()
  File "/usr/local/lib/python3.12/dist-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 355, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/torch/distributed/run.py", line 918, in main
    run(args)
  File "/usr/local/lib/python3.12/dist-packages/torch/distributed/run.py", line 909, in run
    elastic_launch(
  File "/usr/local/lib/python3.12/dist-packages/torch/distributed/launcher/api.py", line 138, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/torch/distributed/launcher/api.py", line 269, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
/iopsstor/scratch/cscs/baraq/lai-proj/train_fsdp.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2025-05-19_13:32:29
  host      : nid006459
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 221641)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2025-05-19_13:32:29
  host      : nid006459
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 221642)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2025-05-19_13:32:29
  host      : nid006459
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 221643)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2025-05-19_13:32:29
  host      : nid006459
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 221640)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
srun: error: nid006459: task 0: Exited with exit code 1
srun: Terminating StepId=449186.0
slurmstepd: error: *** STEP 449186.0 ON nid006459 CANCELLED AT 2025-05-19T13:32:29 ***
srun: error: nid006459: tasks 1-3: Terminated
srun: Force Terminated StepId=449186.0
END TIME: Mon May 19 13:32:31 CEST 2025
